Update JWT